Actualización de requirements.txt con pip freeze

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,19 @@
 asgiref==3.9.1
+crispy-bootstrap5==2025.6
 Django==5.2.6
+django-cors-headers==4.8.0
+django-crispy-forms==2.4
+django-environ==0.12.0
 djangorestframework==3.16.1
 djangorestframework_simplejwt==5.5.1
 drf-yasg==1.21.10
+gunicorn==23.0.0
 inflection==0.5.1
 numpy==2.3.3
 packaging==25.0
 pandas==2.3.2
 pillow==11.3.0
+psycopg2-binary==2.9.10
 PyJWT==2.10.1
 python-dateutil==2.9.0.post0
 pytz==2025.2
@@ -16,10 +22,4 @@ six==1.17.0
 sqlparse==0.5.3
 tzdata==2025.2
 uritemplate==4.2.0
-crispy-bootstrap5
-gunicorn
-django-crispy-forms
-whitenoise
-psycopg2-binary
-django-environ
-django-cors-headers
+whitenoise==6.10.0
