--- a/requirements.txt
+++ b/requirements.txt
@@ -9,12 +9,17 @@ djangorestframework_simplejwt==5.5.1
 drf-yasg==1.21.10
 gunicorn==23.0.0
 inflection==0.5.1
+iniconfig==2.1.0
 numpy==2.3.3
 packaging==25.0
 pandas==2.3.2
 pillow==11.3.0
+pluggy==1.6.0
 psycopg2-binary==2.9.10
+Pygments==2.19.2
 PyJWT==2.10.1
+pytest==8.4.2
+pytest-django==4.11.1
 python-dateutil==2.9.0.post0
 pytz==2025.2
 PyYAML==6.0.2
